<!--
  ~ Copyright 2017, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Football Tracker</string>
    <string name="app_developer">Made by Ivan Iakimenko</string>

    <string name="nav_standings_title">Team Standings</string>
    <string name="nav_favorite_team_title">Favorite Teams</string>
    <string name="nav_matchday_title">Matchday Results</string>

    <string name="table_heading_points">Pts</string>
    <string name="table_heading_goal_differential">+/-</string>
    <string name="table_heading_games_played">Pld</string>
    <string name="table_loading_standings">Loading Standings</string>
    <string name="table_heading_wins">Wins</string>
    <string name="table_heading_losses">Losses</string>
    <string name="table_heading_ties">Ties</string>
    <string name="table_heading_scored">(+)</string>
    <string name="table_heading_conceded">(-)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="content_description_team_logo">Team Logo</string>
    <string name="action_settings">Settings</string>
    <string name="loading_games">Loading Games</string>
    <string name="cd_games_list">Games</string>
    <string name="score_divider">:</string>
    <string name="loading_goals">Loading Goals</string>
    <string name="cd_goals_list">List of Goals</string>
</resources>
